force-app/main/default/objects/Entitlement__c/Entitlement__c.object-meta.xml
<CustomObject>
    <label>Asset Entitlement</label>
    <nameField>
        <displayFormat>ENT-{000000}</displayFormat>
        <label>Entitlement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Entitlements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>