force-app/main/default/objects/Entitlement__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Asset Entitlements</relationshipLabel>
    <relationshipName>Asset_Entitlements</relationshipName>
    <type>Lookup</type>
</CustomField>