force-app/main/default/objects/Entitlement__c/fields/Asset_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Asset_Account_ID__c</fullName>
    <formula>Asset__r.Account.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Account ID</label>
    <type>Text</type>
</CustomField>