force-app/main/default/objects/Entitlement__c/fields/Chapter_Home__c.field-meta.xml
<CustomField>
    <fullName>Chapter_Home__c</fullName>
    <formula>HYPERLINK(&quot;https://&quot;+ Asset__r.Product2.Chapter_URL__c,   Asset__r.Name  ,&apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chapter Home</label>
    <type>Text</type>
</CustomField>