force-app/main/default/objects/Entitlement__c/fields/Primary_Chapter__c.field-meta.xml
<CustomField>
    <fullName>Primary_Chapter__c</fullName>
    <formula>Asset__r.Primary_Chapter__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Chapter</label>
    <type>Checkbox</type>
</CustomField>