force-app/main/default/objects/Entitlement__c/fields/Running_User_Matches_Contact__c.field-meta.xml
<CustomField>
    <fullName>Running_User_Matches_Contact__c</fullName>
    <description>For portal users. Returns TRUE if running user&apos;s Contact ID matches the Asset Entitlement Contact ID.</description>
    <formula>Contact__c =  $User.ContactId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Running User Matches Contact</label>
    <type>Checkbox</type>
</CustomField>