force-app/main/default/objects/Entitlement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Asset__c</columns>
    <columns>Contact__c</columns>
    <columns>Contract__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Product_Name__c</columns>
    <columns>Term_End_Date__c</columns>
    <columns>Term_Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>