force-app/main/default/objects/Entitlement__c/listViews/My_Chapters.listView-meta.xml
<ListView>
    <fullName>My_Chapters</fullName>
    <columns>Chapter_Home__c</columns>
    <columns>Term_Start_Date__c</columns>
    <columns>Term_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Family__c</field>
        <operation>equals</operation>
        <value>Chapter</value>
    </filters>
    <filters>
        <field>Running_User_Matches_Contact__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>My Chapters</label>
</ListView>